style: add opacity tansition to dropdowns style: add figaRo font-family to whole website

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,11 @@
 .Main {
     height: 100%;
     width: 100%;
+}
+
+@layer base {
+  @font-face {
+    font-family: 'figaRo';
+    src: url('/src/assets/fonts/FiraGO.otf') format('trueType');
   }
+}
